crates/datarig-tui/tests/snapshots/flows_menu__action_menu_editor_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_menu.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig default         ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                           │" Hidden by multi-width symbols: [(47, " ")]
"│    ▸ analytics             ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                             │"
"│    ▸ public                ││ ╭──────────────────────────────────────────────────────────────────────────────────────╮"
"│    ▸ shop                  ││ │ › type to filter                                                                     │"
"│                            ││ │ Statement under the cursor                                                           │"
"│                            ││ │  Run statement under cursor                                                   Ctrl+E │"
"│                            ││ │  Format the statement under the cursor or the selection (only its layout)  Space e f │"
"│                            ││ │  Comment the line or the selected lines out with -- (or back in)           Space e c │"
"│                            ││ │  Explain: the statement's plan (nothing runs)                              Space e x │"
"│                            ││ │  Explain analyze: run and measure the statement (writes rolled back)       Space e a │"
"│                            │╰─│ Query                                                                                │"
"│                            │╭ │  Edit the query in your own editor ($VISUAL, $EDITOR)                         Ctrl+G │"
"│                            ││ │  Save query                                                                   Ctrl+S │"
"│                            ││ │  Save query as…                                                            Space s a │"
"│                            ││ │  Change this tab's connection                                              Space c s │"
"│                            ││ │  Choose this tab's database and schema                                     Space c d │"
"│                            ││ │  Results pane → hide / show                                                Space r h │"
"│                            ││ ╰──────────────────────────────────────────────────────────────────────────────────────╯"
"│                            ││ 5 │    5 │ 山田太郎             │ やまだ      │ 東…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (48, " "), (50, " "), (67, " "), (69, " "), (71, " "), (81, " ")]
"│                            ││ 6 │    6 │ 王小明               │ NULL        │ 北…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (48, " "), (81, " ")]
"│                            ││ 7 │    7 │ Plain ASCII User     │ ascii_only  │ 16…││                                  │"
"│                            ││ 8 │    8 │ 全角 ＡＢＣ 半角 ｱｲｳ │ é combining │ タ…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (49, " "), (51, " "), (53, " "), (56, " "), (58, " "), (81, " ")]
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────╯╰──────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 8 rows · 12ms                                                                  EN "
