crates/datarig-tui/tests/snapshots/flows_menu__action_menu_explorer_en_100x30.snap
---
source: crates/datarig-tui/tests/flows_menu.rs
expression: "h.draw(100, 30).backend()"
---
"╭ Explorer ─────────────╮ 1 console 1 ×                                                             "
"│   ╭─────────────────────────────────────────────╮────────────────────────────────────────────────╮"
"│▾ ●│ › type to filter                            │0.0.1:55432 · policy: default                   │"
"│  ▾│ ● local-pg                                  │: run the statement under the cursor            │"
"│   │  Explorer: open or toggle             Enter │ers WHERE id <= 8;                              │"
"│   │  Explorer: reload                         r │                                                │"
"│   │  Edit connection profile                  e │us, o.total_amount                              │"
"│   │  Duplicate connection profile             c │                                                │"
"│   │  Delete connection profile                d │u.id = o.user_id                                │"
"│   │  Test connection                          t │d';                                             │"
"│   │  Disconnect                               x │                                                │"
"│   │  New console on this connection           o │cs.events;                                      │"
"│   │  Move connection profile to a folder      m │                                                │"
"│   │ Explorer                                    │cs.events ORDER BY created_at DESC;             │"
"│   │  Explorer: filter profiles                / │                                                │"
"│   │  New connection profile                   n │(30);                                           │"
"│   │  New folder                               N │                                                │"
"│   ╰─────────────────────────────────────────────╯ a semicolon$$ AS dollar, 'it''s; fine' AS quote│"
"│                       ││ 16                                                                      │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"│                       ││                                                                         │"
"╰───────────────────────╯╰─────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                      EN "
