crates/datarig-tui/tests/snapshots/flows_menu__action_menu_tab_en_120x34.snap
---
source: crates/datarig-tui/tests/flows_menu.rs
expression: "h.draw(120, 34).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭───────────────────────────────────────────────────╮────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ › type to filter                                  │lt      Space c s switch connection │"
"│  ▾ datarig default         ││ console 1                                         │he cursor                           │"
"│    ▸ analytics             ││  Close tab                                 Ctrl+W │                                    │"
"│    ▸ public                ││  Save query                                Ctrl+S │                                    │"
"│    ▸ shop                  ││  Save query as…                         Space s a │                                    │"
"│                            ││  Change this tab's connection           Space c s │                                    │"
"│                            ││  Choose this tab's database and schema  Space c d │                                    │"
"│                            ││  Reconnect this tab's connection        Space c r │                                    │"
"│                            ││  Disconnect this tab's connection       Space c x │                                    │"
"│                            ││ Tabs                                              │                                    │"
"│                            ││  New console tab                           Ctrl+T │                                    │"
"│                            ││  Reopen closed tab                      Space t u │────────────────────────────────────╯"
"│                            ││  Toggle pane zoom                         Space z │╮╭ [Cell] Row · I ──────────────────╮"
"│                            ││  Toggle explorer                          Space b │││ id                               │"
"│                            ││  Narrow explorer                          Space < │││ int8 · 1 character               │"
"│                            ││  Widen explorer                           Space > │││                                  │"
"│                            │╰───────────────────────────────────────────────────╯││ 2                                │"
"│                            ││ 3 │    3 │ 張志明               │ 👨‍👩‍👧‍👦 family   │ NU…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (48, " "), (67, " ")]
"│                            ││ 4 │    4 │ Emoji テスト         │ 🔥🚀✨🎉    │ 沖…││                                  │" Hidden by multi-width symbols: [(50, " "), (52, " "), (54, " "), (67, " "), (69, " "), (71, " "), (73, " "), (81, " ")]
"│                            ││ 5 │    5 │ 山田太郎             │ やまだ      │ 東…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (48, " "), (50, " "), (67, " "), (69, " "), (71, " "), (81, " ")]
"│                            ││ 6 │    6 │ 王小明               │ NULL        │ 北…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (48, " "), (81, " ")]
"│                            ││ 7 │    7 │ Plain ASCII User     │ ascii_only  │ 16…││                                  │"
"│                            ││ 8 │    8 │ 全角 ＡＢＣ 半角 ｱｲｳ │ é combining │ タ…││                                  │" Hidden by multi-width symbols: [(44, " "), (46, " "), (49, " "), (51, " "), (53, " "), (56, " "), (58, " "), (81, " ")]
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────╯╰──────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 8 rows · 12ms                                                                  EN "
